change on css files entomof

--- a/entomof.html
+++ b/entomof.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,6 +14,7 @@
     <!-- Link Swiper's CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css" />
 </head>
+
 <body scroll="no">
 
     <div class="header">
@@ -43,7 +45,7 @@
                         <button class="icon icon_menu ml-5 relative sm:ml-3">
                             <div class="navbar-menu bg-[#181818F2] pt-7 pb-11 md:pb-8 pr-9 pl-6 right-4 w-[280px]">
                                 <ul class="overlay">
-                                    <li class="overlay-m-icons icon_home text-left"><a href="#"
+                                    <li class="overlay-m-icons icon_home text-left"><a href="./index.html"
                                             class="text-left text-2xl mb-6 inline-block max-w-full md:text-xl md:mb-4">Главная</a>
                                     </li>
                                     <li class="overlay-m-icons icon_spider text-left"><a href="#"
@@ -86,33 +88,50 @@
 
     <div class="main-entomof">
         <div class="container">
-            <div class="max-w-[670px]">
+            <div class="">
                 <div
-                    class="main-title pt-28 sm:pt-20 text-6xl text-white md:text-3xl sm:text-[28px] md:max-w-[338px] sm:max-w-[318px] md:pt-28">Высокоэффективные Энтомофаги</div>
-                <div class="max-w-[460px] text-2xl leading-10">
-                    Внесение  энтофагов  при помощи БПЛА увеличивает эффективность защиты растений до 90%
+                    class="main-title pt-28 sm:pt-20 text-6xl text-white md:text-3xl sm:text-[28px] max-w-[480px] md:max-w-[338px] sm:max-w-[318px] md:pt-28">
+                    Высокоэффективные Энтомофаги</div>
+                <div class="max-w-[460px] text-2xl leading-10 mt-10">
+                    Внесение энтофагов при помощи БПЛА увеличивает эффективность защиты растений до 90%
                 </div>
-                <div class="main-box mt-36 sm:mt-28 flex sm:justify-around text-white">
-                    <div class="main-item mr-6 md:mr-4">
-                        <h4 class="text-5xl m-0 p-0 cursor-pointer md:text-2xl md:leading-6 sm:text-lg sm:leading-4">50
-                            000 Га</h4>
-                        <p
-                            class="text-2xl mt-4 cursor-pointer text-lightgreen md:text-lg md:leading-[18px] md:mt-2 sm:text-sm sm:leading-[14px]">
-                            ежегодной обработки</p>
+                <div class="main-box max-w-[720px] mt-16 sm:mt-28 flex flex-wrap sm:justify-around text-white">
+                    <div class="ento-item flex basis-[33%] items-center mb-4">
+                        <div class="block mr-3">
+                            <img src="img/entomofagi/main-f1.png" alt="">
+                        </div>
+                        <h6 class="text-xl leading-7">до 90% сои</h6>
                     </div>
-                    <div class="main-item mr-6 md:mr-4">
-                        <h4 class="text-5xl m-0 p-0 cursor-pointer md:text-2xl md:leading-6 sm:text-lg sm:leading-4">30%
-                        </h4>
-                        <p
-                            class="text-2xl mt-4 cursor-pointer text-lightgreen md:text-lg md:leading-[18px] md:mt-2 sm:text-sm sm:leading-[14px]">
-                            экономии средств</p>
+                    <div class="ento-item flex basis-[33%] items-center mb-4">
+                        <div class="block mr-3">
+                            <img src="img/entomofagi/main-f2.png" alt="">
+                        </div>
+                        <h6 class="text-xl leading-7">до 85 % сахарной свеклы</h6>
                     </div>
-                    <div class="main-item">
-                        <h4 class="text-5xl m-0 p-0 cursor-pointer md:text-2xl md:leading-6 sm:text-lg sm:leading-4">10
-                            команд</h4>
-                        <p
-                            class="text-2xl mt-4 cursor-pointer text-lightgreen md:text-lg md:leading-[18px] md:mt-2 sm:text-sm sm:leading-[14px]">
-                            специалистов</p>
+                    <div class="ento-item flex basis-[33%] items-center mb-4">
+                        <div class="block mr-3">
+                            <img src="img/entomofagi/main-f3.png" alt="">
+                        </div>
+                        <h6 class="text-xl leading-7">до 70 % рапса</h6>
+                    </div>
+                    <div class="ento-item flex basis-[33%] items-center">
+                        <div class="block mr-3">
+                            <img src="img/entomofagi/main-f4.png" alt="">
+                        </div>
+                        <h6 class="text-xl leading-7">до 85 % подсолнуха</h6>
+                    </div>
+                    <div class="ento-item flex basis-[33%] items-center">
+                        <div class="block mr-3">
+                            <img src="img/entomofagi/main-f5.png" alt="">
+                        </div>
+                        <h6 class="text-xl leading-7">до 80 % кукурудзы</h6>
+                    </div>
+                    <div class="ento-item flex basis-[33%] items-center">
+                        <div class="block mr-3">
+                            <img src="img/entomofagi/main-f6.png" alt="">
+                        </div>
+                        <h6 class="text-xl leading-7">до 90 % овощных
+                            и плодовых культур</h6>
                     </div>
                 </div>
             </div>
@@ -151,7 +170,7 @@
 
     <!-- Link Styles -->
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/sections/entomof.css">
+    <link rel="stylesheet" href="css/entomof.css">
 
     <!-- Menu  -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
@@ -162,6 +181,7 @@
 
     <!-- JS file -->
     <script src="js/main.js"></script>
-    
+
 </body>
+
 </html>
