--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                                     <li class="overlay-m-icons icon_home text-left"><a href="#"
                                             class="text-left text-2xl mb-6 inline-block max-w-full md:text-xl md:mb-4">Главная</a>
                                     </li>
-                                    <li class="overlay-m-icons icon_spider text-left"><a href="#"
+                                    <li class="overlay-m-icons icon_spider text-left"><a href="./entomof.html"
                                             class="text-left text-2xl mb-6 inline-block max-w-full md:text-xl md:mb-4">Энтомофаги</a>
                                     </li>
                                     <li class="overlay-m-icons icon_opriskivaniy text-left"><a href="#"
