--- a/entomof.html
+++ b/entomof.html
@@ -92,45 +92,47 @@
                 <div
                     class="main-title pt-28 sm:pt-20 text-6xl text-white md:text-3xl sm:text-[28px] max-w-[480px] md:max-w-[338px] sm:max-w-[318px] md:pt-28">
                     Высокоэффективные Энтомофаги</div>
-                <div class="max-w-[460px] text-2xl leading-10 mt-10">
+                <div
+                    class="max-w-[460px] md:max-w-[323px] sm:max-w-[304px] text-2xl md:text-lg sm:text-base leading-10 md:leading-8 mt-10 md:mt-6 sm:mt-5">
                     Внесение энтофагов при помощи БПЛА увеличивает эффективность защиты растений до 90%
                 </div>
-                <div class="main-box max-w-[720px] mt-16 sm:mt-28 flex flex-wrap sm:justify-around text-white">
-                    <div class="ento-item flex basis-[33%] items-center mb-4">
+                <div
+                    class="ento-box max-w-[720px] md:max-w-[563px] md:relative md:top-8 mt-16 md:mt-9 flex flex-wrap text-white">
+                    <div class="ento-item flex basis-[33%] md:basis-[34%] items-center mb-4">
                         <div class="block mr-3">
-                            <img src="img/entomofagi/main-f1.png" alt="">
+                            <img class="md:w-8 md:h-8" src="img/entomofagi/main-f1.png" alt="">
                         </div>
-                        <h6 class="text-xl leading-7">до 90% сои</h6>
+                        <h6 class="text-xl md:text-lg leading-7 md:leading-[18px]">до 90% сои</h6>
                     </div>
-                    <div class="ento-item flex basis-[33%] items-center mb-4">
+                    <div class="ento-item flex basis-[33%] md:basis-[34%] items-center mb-4">
                         <div class="block mr-3">
-                            <img src="img/entomofagi/main-f2.png" alt="">
+                            <img class="md:w-8 md:h-8" src="img/entomofagi/main-f2.png" alt="">
                         </div>
-                        <h6 class="text-xl leading-7">до 85 % сахарной свеклы</h6>
+                        <h6 class="text-xl md:text-lg leading-7 md:leading-[18px]">до 85 % сахарной свеклы</h6>
                     </div>
-                    <div class="ento-item flex basis-[33%] items-center mb-4">
+                    <div class="ento-item flex basis-[33%] md:basis-[34%] items-center mb-4">
                         <div class="block mr-3">
-                            <img src="img/entomofagi/main-f3.png" alt="">
+                            <img class="md:w-8 md:h-8" src="img/entomofagi/main-f3.png" alt="">
                         </div>
-                        <h6 class="text-xl leading-7">до 70 % рапса</h6>
+                        <h6 class="text-xl md:text-lg leading-7 md:leading-[18px]">до 70 % рапса</h6>
                     </div>
-                    <div class="ento-item flex basis-[33%] items-center">
+                    <div class="ento-item flex basis-[33%] md:basis-[34%] items-center">
                         <div class="block mr-3">
-                            <img src="img/entomofagi/main-f4.png" alt="">
+                            <img class="md:w-8 md:h-8" src="img/entomofagi/main-f4.png" alt="">
                         </div>
-                        <h6 class="text-xl leading-7">до 85 % подсолнуха</h6>
+                        <h6 class="text-xl md:text-lg leading-7 md:leading-[18px]">до 85 % подсолнуха</h6>
                     </div>
-                    <div class="ento-item flex basis-[33%] items-center">
+                    <div class="ento-item flex basis-[33%] md:basis-[34%] items-center">
                         <div class="block mr-3">
-                            <img src="img/entomofagi/main-f5.png" alt="">
+                            <img class="md:w-8 md:h-8" src="img/entomofagi/main-f5.png" alt="">
                         </div>
-                        <h6 class="text-xl leading-7">до 80 % кукурудзы</h6>
+                        <h6 class="text-xl md:text-lg leading-7 md:leading-[18px]">до 80 % кукурудзы</h6>
                     </div>
-                    <div class="ento-item flex basis-[33%] items-center">
+                    <div class="ento-item flex basis-[33%] md:basis-[34%] items-center">
                         <div class="block mr-3">
-                            <img src="img/entomofagi/main-f6.png" alt="">
+                            <img class="md:w-8 md:h-8" src="img/entomofagi/main-f6.png" alt="">
                         </div>
-                        <h6 class="text-xl leading-7">до 90 % овощных
+                        <h6 class="text-xl md:text-lg leading-7 md:leading-[18px]">до 90 % овощных
                             и плодовых культур</h6>
                     </div>
                 </div>
