adding a new element, page, change 480 to 360

--- a/entomof.html
+++ b/entomof.html
@@ -97,38 +97,38 @@
                     Внесение энтофагов при помощи БПЛА увеличивает эффективность защиты растений до 90%
                 </div>
                 <div
-                    class="ento-box max-w-[720px] md:max-w-[563px] md:relative md:top-8 mt-16 md:mt-9 flex flex-wrap text-white">
-                    <div class="ento-item flex basis-[33%] md:basis-[34%] items-center mb-4">
+                    class="ento-box max-w-[720px] md:max-w-[563px] md:relative md:top-8 mt-16 md:mt-9 sm:mt-1 flex flex-wrap text-white">
+                    <div class="ento-item flex basis-[33%] md:basis-[34%] sm:basis-[48%] items-center mb-4">
                         <div class="block mr-3">
                             <img class="md:w-8 md:h-8" src="img/entomofagi/main-f1.png" alt="">
                         </div>
                         <h6 class="text-xl md:text-lg leading-7 md:leading-[18px]">до 90% сои</h6>
                     </div>
-                    <div class="ento-item flex basis-[33%] md:basis-[34%] items-center mb-4">
+                    <div class="ento-item flex basis-[33%] md:basis-[34%] sm:basis-[48%] items-center mb-4">
                         <div class="block mr-3">
                             <img class="md:w-8 md:h-8" src="img/entomofagi/main-f2.png" alt="">
                         </div>
                         <h6 class="text-xl md:text-lg leading-7 md:leading-[18px]">до 85 % сахарной свеклы</h6>
                     </div>
-                    <div class="ento-item flex basis-[33%] md:basis-[34%] items-center mb-4">
+                    <div class="ento-item flex basis-[33%] md:basis-[34%] sm:basis-[48%] items-center mb-4">
                         <div class="block mr-3">
                             <img class="md:w-8 md:h-8" src="img/entomofagi/main-f3.png" alt="">
                         </div>
                         <h6 class="text-xl md:text-lg leading-7 md:leading-[18px]">до 70 % рапса</h6>
                     </div>
-                    <div class="ento-item flex basis-[33%] md:basis-[34%] items-center">
+                    <div class="ento-item flex basis-[33%] md:basis-[34%] sm:basis-[48%] items-center">
                         <div class="block mr-3">
                             <img class="md:w-8 md:h-8" src="img/entomofagi/main-f4.png" alt="">
                         </div>
                         <h6 class="text-xl md:text-lg leading-7 md:leading-[18px]">до 85 % подсолнуха</h6>
                     </div>
-                    <div class="ento-item flex basis-[33%] md:basis-[34%] items-center">
+                    <div class="ento-item flex basis-[33%] md:basis-[34%] sm:basis-[48%] items-center">
                         <div class="block mr-3">
                             <img class="md:w-8 md:h-8" src="img/entomofagi/main-f5.png" alt="">
                         </div>
                         <h6 class="text-xl md:text-lg leading-7 md:leading-[18px]">до 80 % кукурудзы</h6>
                     </div>
-                    <div class="ento-item flex basis-[33%] md:basis-[34%] items-center">
+                    <div class="ento-item flex basis-[33%] md:basis-[34%] sm:basis-[48%] items-center">
                         <div class="block mr-3">
                             <img class="md:w-8 md:h-8" src="img/entomofagi/main-f6.png" alt="">
                         </div>
