--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <div class="header">
         <div class="container">
-            <div class="header-items flex justify-between items-center py-2 md:px-[30px] sm:justify-start">
+            <div class="header-items flex justify-between items-center py-2 sm:py-[3px] md:px-[30px] sm:px-0">
                 <div class="header-item flex items-center text-white">
                     <div class="img-logo mr-5 md:mr-4"><img src="img/main/logo.png" alt="logo"></div>
                     <div class="phone-number sm:hidden icon_phone cursor-pointer md:mr-2">+7861 21791 18</div>
@@ -33,15 +33,15 @@
                     </div>
                     <div class="language flex text-2xl font-normal md:text-xl">
                         <p
-                            class="ml-[70px] cursor-pointer hover:text-lightgreen transition-[0.3s] md:ml-8 sm:ml-3 sm:text-xl">
+                            class="ml-[70px] cursor-pointer hover:text-lightgreen transition-[0.3s] md:ml-8 sm:ml-3 sm:text-[15px]">
                             EN
                         </p>
                         <p
-                            class="ml-5 cursor-pointer hover:text-lightgreen transition-[0.3s] md:ml-[19px] sm:ml-3 sm:text-xl">
+                            class="ml-5 cursor-pointer hover:text-lightgreen transition-[0.3s] md:ml-[19px] sm:ml-3 sm:text-[15px]">
                             RU
                         </p>
                     </div>
-                    <div class="h-ends flex ml-12 items-center md:ml-9 sm:ml-3 sm:mt-[10px]">
+                    <div class="h-ends flex ml-12 items-center md:ml-9 sm:ml-3 sm:mt-0">
                         <div class="icon icon_shoppingcart"></div>
                         <button class="icon icon_menu ml-5 relative sm:ml-3">
                             <div class="navbar-menu bg-[#181818F2] pt-7 pb-11 md:pb-8 pr-9 pl-6 right-4 w-[280px]">
@@ -104,7 +104,7 @@
                     </svg>
                     <img class="dron-image" src="img/main/header-dron.png" alt="">
                 </div>
-                <div class="main-box mt-36 sm:mt-28 flex sm:justify-around text-white">
+                <div class="main-box mt-36 sm:mt-20 flex sm:justify-around text-white">
                     <div class="main-item mr-6 md:mr-4">
                         <h4 class="text-5xl m-0 p-0 cursor-pointer md:text-2xl md:leading-6 sm:text-lg sm:leading-4">50
                             000 Га</h4>
@@ -133,7 +133,7 @@
 
 
 
-    <section class="advantage mt-8">
+    <section class="advantage mt-8 sm:mt-0">
         <div class="container">
             <div class="primary-title">
                 <h1>Почему нам дверяют?</h1>
@@ -144,13 +144,14 @@
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
                         <div
-                            class="w-[90%] md:w-[90%] text-white px-7 py-14 md:py-10  bg-bgflex ml-5 mb-5 rounded-lg transition-[0.4s]">
-                            <div class="flex items-center mb-6 cursor-pointer">
-                                <img src="img/main/f-icon1.png" alt="">
-                                <h5 class="ml-2 text-[22px] md:text-xl sm:text-lg leading-5">Квалифицированные
+                            class="w-[90%] md:w-[90%] text-white px-7 py-14 md:py-10 sm:py-4  bg-bgflex ml-5 mb-5 rounded-lg transition-[0.4s]">
+                            <div class="flex items-center mb-6 sm:mb-3 cursor-pointer">
+                                <img class="adv-img" src="img/main/f-icon1.png" alt="">
+                                <h5 class="ml-2 text-[22px] md:text-xl sm:text-base leading-5">Квалифицированные
                                     сотрудники</h5>
                             </div>
-                            <p class="text-base text-textflex leading-8">Все наши сотрудники имеют многолетний опыт
+                            <p class="text-base sm:text-[13px] text-textflex leading-8 sm:leading-6">Все наши сотрудники
+                                имеют многолетний опыт
                                 работы в
                                 сфере беспилотной авиации.
                                 Нами было
@@ -159,13 +160,14 @@
                     </div>
                     <div class="swiper-slide">
                         <div
-                            class="w-[90%] md:w-[90%] text-white px-7 py-14 md:py-10  bg-bgflex ml-5 mb-5 rounded-lg transition-[0.4s]">
-                            <div class="flex items-center mb-6 cursor-pointer">
-                                <img src="img/main/f-icon2.png" alt="">
-                                <h5 class="ml-2 text-[22px] md:text-xl sm:text-lg leading-5">Высокотехнологичное
+                            class="w-[90%] md:w-[90%] text-white px-7 py-14 md:py-10 sm:py-4  bg-bgflex ml-5 mb-5 rounded-lg transition-[0.4s]">
+                            <div class="flex items-center mb-6 sm:mb-3 cursor-pointer">
+                                <img class="adv-img" src="img/main/f-icon2.png" alt="">
+                                <h5 class="ml-2 text-[22px] md:text-xl sm:text-base leading-5">Высокотехнологичное
                                     оборудование </h5>
                             </div>
-                            <p class="text-base text-textflex leading-8">Наша компания использует современное
+                            <p class="text-base sm:text-[13px] text-textflex leading-8 sm:leading-6">Наша компания
+                                использует современное
                                 оборудование,
                                 которое обеспечивает высокое качество в
                                 выполнении поставленных задач.</p>
@@ -173,12 +175,13 @@
                     </div>
                     <div class="swiper-slide">
                         <div
-                            class="w-[90%] md:w-[90%] text-white px-7 py-14 md:py-10  bg-bgflex ml-5 mb-5 rounded-lg transition-[0.4s]">
-                            <div class="flex items-center mb-6 cursor-pointer">
-                                <img src="img/main/f-icon3.png" alt="">
-                                <h5 class="ml-2 text-[22px] md:text-xl sm:text-lg leading-5">Экономия</h5>
+                            class="w-[90%] md:w-[90%] text-white px-7 py-14 md:py-10 sm:py-4  bg-bgflex ml-5 mb-5 rounded-lg transition-[0.4s]">
+                            <div class="flex items-center mb-6 sm:mb-3 cursor-pointer">
+                                <img class="adv-img" src="img/main/f-icon3.png" alt="">
+                                <h5 class="ml-2 text-[22px] md:text-xl sm:text-base leading-5">Экономия</h5>
                             </div>
-                            <p class="text-base text-textflex leading-8">Использование беспилотных технологий экономит
+                            <p class="text-base sm:text-[13px] text-textflex leading-8 sm:leading-6">Использование
+                                беспилотных технологий экономит
                                 вам много
                                 времени и денег. За счет отсутствия
                                 технологической колеи сохраняется до 6% урожая. Снижение расхода препаратов до 30%</p>
@@ -186,12 +189,13 @@
                     </div>
                     <div class="swiper-slide">
                         <div
-                            class="w-[90%] md:w-[90%] text-white px-7 py-14 md:py-10  bg-bgflex ml-5 mb-5 rounded-lg transition-[0.4s]">
-                            <div class="flex items-center mb-6 cursor-pointer">
-                                <img src="img/main/f-icon4.png" alt="">
-                                <h5 class="ml-2 text-[22px] md:text-xl sm:text-lg leading-5">Оперативность</h5>
+                            class="w-[90%] md:w-[90%] text-white px-7 py-14 md:py-10 sm:py-4  bg-bgflex ml-5 mb-5 rounded-lg transition-[0.4s]">
+                            <div class="flex items-center mb-6 sm:mb-3 cursor-pointer">
+                                <img class="adv-img" src="img/main/f-icon4.png" alt="">
+                                <h5 class="ml-2 text-[22px] md:text-xl sm:text-base leading-5">Оперативность</h5>
                             </div>
-                            <p class="text-base text-textflex leading-8">За рабочую смену наши специалисты способны
+                            <p class="text-base sm:text-[13px] text-textflex leading-8 sm:leading-6">За рабочую смену
+                                наши специалисты способны
                                 защитить
                                 более 1000 гектар ваших полей, кустарников и
                                 деревьев.</p>
@@ -199,13 +203,14 @@
                     </div>
                     <div class="swiper-slide">
                         <div
-                            class="w-[90%] md:w-[90%] text-white px-7 py-14 md:py-10  bg-bgflex ml-5 mb-5 rounded-lg transition-[0.4s]">
-                            <div class="flex items-center mb-6 cursor-pointer">
-                                <img src="img/main/f-icon5.png" alt="">
-                                <h5 class="ml-2 text-[22px] md:text-xl sm:text-lg leading-5">Собственное производство
+                            class="w-[90%] md:w-[90%] text-white px-7 py-14 md:py-10 sm:py-4  bg-bgflex ml-5 mb-5 rounded-lg transition-[0.4s]">
+                            <div class="flex items-center mb-6 sm:mb-3 cursor-pointer">
+                                <img class="adv-img" src="img/main/f-icon5.png" alt="">
+                                <h5 class="ml-2 text-[22px] md:text-xl sm:text-base leading-5">Собственное производство
                                 </h5>
                             </div>
-                            <p class="text-base text-textflex leading-8">Мы разрабатываем и производим беспилотные
+                            <p class="text-base sm:text-[13px] text-textflex leading-8 sm:leading-6">Мы разрабатываем и
+                                производим беспилотные
                                 летательные
                                 аппараты, поэтому знаем все тонкости их
                                 работы и можем настроить их под конкретные задачи и потребности клиентов.</p>
@@ -213,12 +218,13 @@
                     </div>
                     <div class="swiper-slide">
                         <div
-                            class="w-[90%] md:w-[90%] text-white px-7 py-14 md:py-10  bg-bgflex ml-5 mb-5 rounded-lg transition-[0.4s]">
-                            <div class="flex items-center mb-6 cursor-pointer">
-                                <img src="img/main/f-icon6.png" alt="">
-                                <h5 class="ml-2 text-[22px] md:text-xl sm:text-lg leading-5">Свой сервис</h5>
+                            class="w-[90%] md:w-[90%] text-white px-7 py-14 md:py-10 sm:py-4  bg-bgflex ml-5 mb-5 rounded-lg transition-[0.4s]">
+                            <div class="flex items-center mb-6 sm:mb-3 cursor-pointer">
+                                <img class="adv-img" src="img/main/f-icon6.png" alt="">
+                                <h5 class="ml-2 text-[22px] md:text-xl sm:text-base leading-5">Свой сервис</h5>
                             </div>
-                            <p class="text-base text-textflex leading-8">Любой наш аппарат можно сдать на плановое
+                            <p class="text-base sm:text-[13px] text-textflex leading-8 sm:leading-6">Любой наш аппарат
+                                можно сдать на плановое
                                 техническое
                                 обслуживание или же в ремонт в наш
                                 собственный сервис, который гарантирует качество и оперативность выполнения работ.</p>
@@ -230,7 +236,7 @@
 
             <div class="advantage-items flex flex-wrap sm:hidden">
                 <div
-                    class="advantage-item w-[30%] md:w-[44%] text-white px-7 py-14 md:py-10  bg-bgflex ml-5 mb-5 rounded-lg hover:-translate-y-5 transition-[0.4s]">
+                    class="advantage-item w-[30%] md:w-[44%] text-white px-7 py-14 md:py-10 sm:py-4  bg-bgflex ml-5 mb-5 rounded-lg hover:-translate-y-5 transition-[0.4s]">
                     <div class="flex items-center mb-6 cursor-pointer">
                         <img src="img/main/f-icon1.png" alt="">
                         <h5 class="ml-2 text-[22px] md:text-xl leading-5">Квалифицированные сотрудники</h5>
@@ -241,7 +247,7 @@
                         реализовано множество проектов различной тематики и самой различной сложности.</p>
                 </div>
                 <div
-                    class="advantage-item w-[30%] md:w-[44%] text-white px-7 py-14 md:py-10  bg-bgflex ml-5 mb-5 rounded-lg hover:-translate-y-5 transition-[0.4s]">
+                    class="advantage-item w-[30%] md:w-[44%] text-white px-7 py-14 md:py-10 sm:py-4  bg-bgflex ml-5 mb-5 rounded-lg hover:-translate-y-5 transition-[0.4s]">
                     <div class="flex items-center mb-6 cursor-pointer">
                         <img src="img/main/f-icon2.png" alt="">
                         <h5 class="ml-2 text-[22px] md:text-xl leading-5">Высокотехнологичное оборудование </h5>
@@ -251,7 +257,7 @@
                         выполнении поставленных задач.</p>
                 </div>
                 <div
-                    class="advantage-item w-[30%] md:w-[44%] text-white px-7 py-14 md:py-10  bg-bgflex ml-5 mb-5 rounded-lg hover:-translate-y-5 transition-[0.4s]">
+                    class="advantage-item w-[30%] md:w-[44%] text-white px-7 py-14 md:py-10 sm:py-4  bg-bgflex ml-5 mb-5 rounded-lg hover:-translate-y-5 transition-[0.4s]">
                     <div class="flex items-center mb-6 cursor-pointer">
                         <img src="img/main/f-icon3.png" alt="">
                         <h5 class="ml-2 text-[22px] md:text-xl leading-5">Экономия</h5>
@@ -261,7 +267,7 @@
                         технологической колеи сохраняется до 6% урожая. Снижение расхода препаратов до 30%</p>
                 </div>
                 <div
-                    class="advantage-item w-[30%] md:w-[44%] text-white px-7 py-14 md:py-10  bg-bgflex ml-5 mb-5 rounded-lg hover:-translate-y-5 transition-[0.4s]">
+                    class="advantage-item w-[30%] md:w-[44%] text-white px-7 py-14 md:py-10 sm:py-4  bg-bgflex ml-5 mb-5 rounded-lg hover:-translate-y-5 transition-[0.4s]">
                     <div class="flex items-center mb-6 cursor-pointer">
                         <img src="img/main/f-icon4.png" alt="">
                         <h5 class="ml-2 text-[22px] md:text-xl leading-5">Оперативность</h5>
@@ -271,7 +277,7 @@
                         деревьев.</p>
                 </div>
                 <div
-                    class="advantage-item w-[30%] md:w-[44%] text-white px-7 py-14 md:py-10  bg-bgflex ml-5 mb-5 rounded-lg hover:-translate-y-5 transition-[0.4s]">
+                    class="advantage-item w-[30%] md:w-[44%] text-white px-7 py-14 md:py-10 sm:py-4  bg-bgflex ml-5 mb-5 rounded-lg hover:-translate-y-5 transition-[0.4s]">
                     <div class="flex items-center mb-6 cursor-pointer">
                         <img src="img/main/f-icon5.png" alt="">
                         <h5 class="ml-2 text-[22px] md:text-xl leading-5">Собственное производство </h5>
@@ -281,7 +287,7 @@
                         работы и можем настроить их под конкретные задачи и потребности клиентов.</p>
                 </div>
                 <div
-                    class="advantage-item w-[30%] md:w-[44%] text-white px-7 py-14 md:py-10  bg-bgflex ml-5 mb-5 rounded-lg hover:-translate-y-5 transition-[0.4s]">
+                    class="advantage-item w-[30%] md:w-[44%] text-white px-7 py-14 md:py-10 sm:py-4  bg-bgflex ml-5 mb-5 rounded-lg hover:-translate-y-5 transition-[0.4s]">
                     <div class="flex items-center mb-6 cursor-pointer">
                         <img src="img/main/f-icon6.png" alt="">
                         <h5 class="ml-2 text-[22px] md:text-xl leading-5">Свой сервис</h5>
