changing 360 index html

--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
     </section>
 
 
-    <section class="product mt-24 md:mt-16 md:mb-16">
+    <section class="product mt-24 md:mt-16 sm:mt-12 md:mb-16">
         <div class="container">
             <div class="primary-title">
                 <h1>Наши предложения</h1>
@@ -311,57 +311,60 @@
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
                         <div class="p-item box-border text-white bg-bgflex mb-5 rounded-lg transition-[0.4s]">
-                            <div class="p-img mx-6 mt-4 max-w-[348px] sm:max-w-[240px]"><img
+                            <div class="p-img mx-6 sm:mx-0 mt-4 max-w-[310px] sm:max-w-[218px]"><img
                                     src="img/main/product-d1.png" alt="Dron1">
                             </div>
-                            <div class="p-info ml-10">
+                            <div class="p-info ml-10 sm:ml-5">
                                 <div class="p-name leading-8 text-3xl sm:text-xl mt-7">Агродрон AGR A22</div>
                                 <div
                                     class="p-about mt-8 sm:mt-2 mb-5 sm:mb-2 text-[22px] sm:text-lg leading-9 font-normal">
                                     <p>Бренд: <span class="font-light">AGR</span></p>
                                     <p> Модель: <span class="font-light">101-0101</span></p>
                                 </div>
-                                <div class="p-price text-3xl sm:text-2xl leading-7 sm:leading-6 mb-12">$15001.27</div>
+                                <div class="p-price text-3xl sm:text-2xl leading-7 sm:leading-6 mb-12 sm:mb-6">$15001.27
+                                </div>
                                 <button
-                                    class="p-shopping border px-14 md:px-20 sm:px-11 pt-4 pb-5 mb-16 text-2xl sm:text-xl sm:leading-5 text-lightgreen border-lightgreen transition-[0.4s] hover:bg-lightgreen hover:text-white">Добавить
+                                    class="p-shopping border px-14 md:px-16 sm:px-8 pt-4 pb-5 mb-16 sm:mb-8 text-2xl sm:text-[17px] sm:leading-[0.5rem] text-lightgreen border-lightgreen transition-[0.4s] hover:bg-lightgreen hover:text-white">Добавить
                                     в корзину</button>
                             </div>
                         </div>
                     </div>
                     <div class="swiper-slide">
-                        <div class="p-item box-border text-white bg-bgflex mb-5 rounded-lg transition-[0.4s]">
-                            <div class="p-img mx-6 mt-4 max-w-[348px] sm:max-w-[240px]"><img
+                        <div class="p-item box-border text-white bg-bgflex mb-5 sm:mb-0 rounded-lg transition-[0.4s]">
+                            <div class="p-img mx-6 sm:mx-0  mt-4 max-w-[310px] sm:max-w-[218px]"><img
                                     src="img/main/product-d2.png" alt="Dron1">
                             </div>
-                            <div class="p-info ml-10">
+                            <div class="p-info ml-10 sm:ml-5">
                                 <div class="p-name leading-8 text-3xl sm:text-xl mt-7">Дрон- Картограф STS M8</div>
                                 <div
                                     class="p-about mt-8 sm:mt-2 mb-5 sm:mb-2 text-[22px] sm:text-lg leading-9 font-normal">
                                     <p>Бренд: <span class="font-light">STS</span></p>
                                     <p> Модель: <span class="font-light">101-11</span></p>
                                 </div>
-                                <div class="p-price text-3xl sm:text-2xl leading-7 sm:leading-6 mb-12">$18206.30</div>
+                                <div class="p-price text-3xl sm:text-2xl leading-7 sm:leading-6 mb-12 sm:mb-6">$18206.30
+                                </div>
                                 <button
-                                    class="p-shopping border px-14 md:px-20 sm:px-11 pt-4 pb-5 mb-16 text-2xl sm:text-xl sm:leading-5 text-lightgreen border-lightgreen transition-[0.4s] hover:bg-lightgreen hover:text-white">Добавить
+                                    class="p-shopping border px-14 md:px-16 sm:px-8 pt-4 pb-5 mb-16 sm:mb-8 text-2xl sm:text-[17px] sm:leading-[0.5rem] text-lightgreen border-lightgreen transition-[0.4s] hover:bg-lightgreen hover:text-white">Добавить
                                     в корзину</button>
                             </div>
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div class="p-item box-border text-white bg-bgflex mb-5 rounded-lg transition-[0.4s]">
-                            <div class="p-img mx-6 mt-4 max-w-[348px] sm:max-w-[240px]"><img
+                            <div class="p-img mx-6 sm:mx-0 mt-4 max-w-[310px] sm:max-w-[218px]"><img
                                     src="img/main/product-d3.png" alt="Dron1">
                             </div>
-                            <div class="p-info ml-10">
+                            <div class="p-info ml-10 sm:ml-5">
                                 <div class="p-name leading-8 text-3xl sm:text-xl mt-7">Дрон - Картограф STS M1550</div>
                                 <div
                                     class="p-about mt-8 sm:mt-2 mb-5 sm:mb-2 text-[22px] sm:text-lg leading-9 font-normal">
                                     <p>Бренд: <span class="font-light">STS</span></p>
                                     <p> Модель: <span class="font-light">100-10</span></p>
                                 </div>
-                                <div class="p-price text-3xl sm:text-2xl leading-7 sm:leading-6 mb-12">$13802.86</div>
+                                <div class="p-price text-3xl sm:text-2xl leading-7 sm:leading-6 mb-12 sm:mb-6">$13802.86
+                                </div>
                                 <button
-                                    class="p-shopping border px-14 md:px-20 sm:px-11 pt-4 pb-5 mb-16 text-2xl sm:text-xl sm:leading-5 text-lightgreen border-lightgreen transition-[0.4s] hover:bg-lightgreen hover:text-white">Добавить
+                                    class="p-shopping border px-14 md:px-16 sm:px-8 pt-4 pb-5 mb-16 sm:mb-8  text-2xl sm:text-[17px] sm:leading-[0.5rem] text-lightgreen border-lightgreen transition-[0.4s] hover:bg-lightgreen hover:text-white">Добавить
                                     в корзину</button>
                             </div>
                         </div>
@@ -428,7 +431,7 @@
     <section class="service">
         <div class="container">
             <h1
-                class="text-7xl md:text-3xl sm:text-[26px] leading-[54px] sm:leading-5 md:leading-7 mb-12 sm:mb-5 md:mb-7">
+                class="text-7xl md:text-3xl sm:text-[26px] leading-[54px] sm:leading-5 md:leading-7 mb-12 sm:mb-5 md:mb-7 md:pt-[72px] sm:pt-48">
                 Оказываем услуги!</h1>
             <p
                 class="text-[34px]  md:text-lg sm:text-sm leading-[54px] sm:leading-6 md:leading-8 font-light max-w-[600px] md:max-w-[330px] sm:max-w-[270px] mb-[70px] md:mb-12 sm:mb-[30px] sm:mx-auto">
@@ -436,8 +439,8 @@
                 химической защите растений дронами, картографии и
                 мониторингу.</p>
             <button
-                class=" border px-14 md:px-12 sm:px-8 pt-4 pb-5 md:py-4 text-2xl sm:text-[22px] md:leading-6 sm:leading-4  text-lightgreen border-lightgreen transition-[0.4s] hover:bg-lightgreen hover:text-white">Оставить
-                заявку</button>
+                class="p-shopping border px-14 md:px-12 sm:px-8 pt-4 pb-5 mb-16 sm:mb-8  text-2xl sm:text-[17px] md:leading-4 sm:leading-[0.5rem] text-lightgreen border-lightgreen transition-[0.4s] hover:bg-lightgreen hover:text-white">Добавить
+                в корзину</button>
         </div>
     </section>
 
@@ -509,7 +512,7 @@
             </div>
             <div class="country-box relative flex md:justify-center">
                 <div class="country-item flex md:pt-[640px] sm:pt-[360px]">
-                    <ol class="mr-20 font-light text-2xl sm:text-base leading-9 sm:leading-[27px]">
+                    <ol class="mr-20 sm:mr-4 font-light text-2xl sm:text-base leading-9 sm:leading-[27px]">
                         <li>1.Московская область</li>
                         <li>2. Ростовская область</li>
                         <li>3. Краснодарский край</li>
@@ -523,7 +526,7 @@
                         <li>11. Волгоградская область</li>
                         <li>12. Астраханская область</li>
                     </ol>
-                    <ol class="mr-20 font-light text-2xl sm:text-base leading-9 sm:leading-[27px]">
+                    <ol class="mr-20 sm:mr-0 font-light text-2xl sm:text-base leading-9 sm:leading-[27px]">
                         <li>13. Самарская область</li>
                         <li>14. Липецкая область</li>
                         <li>15. Орловская область</li>
@@ -578,7 +581,7 @@
             <div class="swiper mySwiperTwo">
                 <div class="swiper-wrapper">
                     <div div class="swiper-slide">
-                        <picture><img src="img/main/news1.jpg" alt=""></picture>
+                        <picture><img src="img/main/news1.jpg" class="img-new" alt=""></picture>
                         <h5 class="text-xl sm:text-xl leading-[22px] sm:leading-5 mt-10 sm:mt-8 mb-4 sm:mb-4">Дроны –
                             будущее сельского
                             хозяйства</h5>
@@ -590,7 +593,7 @@
                         <div class="news-more pb-7"><a href="#">Читать полностью</a></div>
                     </div>
                     <div class="swiper-slide">
-                        <picture><img src="img/main/news2.jpg" alt=""></picture>
+                        <picture><img src="img/main/news2.jpg" class="img-new" alt=""></picture>
                         <h5 class="text-xl sm:text-xl leading-[22px] sm:leading-5 mt-10 sm:mt-8 mb-4 sm:mb-4">Зачем
                             нужны беспилотники в сельском хозяйстве?
                         </h5>
@@ -604,7 +607,7 @@
                         <div class="news-more pb-7"><a href="#">Читать полностью</a></div>
                     </div>
                     <div class="swiper-slide">
-                        <picture><img src="img/main/news3.jpg" alt=""></picture>
+                        <picture><img src="img/main/news3.jpg" class="img-new" alt=""></picture>
                         <h5 class="text-xl sm:text-xl leading-[22px] sm:leading-5 mt-10 sm:mt-8 mb-4 sm:mb-4">Создание
                             цифровых карт и контуров полей</h5>
                         <p class="my-8 sm:mt-0 sm:mb-7 font-light text-lg sm:text-base">Многие руководители агрохозяйств
@@ -659,15 +662,15 @@
                     <div class="img-logo sm:hidden mr-5 sm:mr-0 sm:w-28 sm:h-[106px] sm:mt-4"><img
                             src="img/main/logo.png" alt="logo"></div>
                     <div class="hidden sm:block sm:mr-0 sm:w-28 sm:h-[106px] sm:mt-4"><img
-                            src="img/main/media480/logo.png" alt="logo"></div>
-                    <div class="phone-number icon_phone cursor-pointer sm:text-lg sm:mb-6">+7861 21791 18</div>
+                            src="img/main/media360/logo.png" alt="logo"></div>
+                    <div class="phone-number icon_phone cursor-pointer sm:text-lg sm:mb-4 sm:mt-2">+7861 21791 18</div>
                 </div>
                 <div class="icons flex sm:flex-col sm:justify-center items-center sm:mr-3">
-                    <p class="text-lg leading-5 sm:mb-7 sm:ml-3">Подписывайтесь на наши соц. сети: </p>
+                    <p class="text-lg leading-5 sm:mb-3 sm:ml-3">Подписывайтесь на наши соц. сети: </p>
                     <div class="icons sm:flex justify-center hidden">
                         <div class="icon footer icon_vk text-white sm:text-4xl"></div>
                         <div class="icon footer icon_instagram text-white sm:text-4xl"></div>
-                        <div class="icon footer icon_tiktok text-white sm:text-4xl sm:mb-12"></div>
+                        <div class="icon footer icon_tiktok text-white sm:text-4xl sm:mb-8"></div>
                     </div>
                     <div class="icon icon_vk text-white sm:hidden"></div>
                     <div class="icon icon_instagram text-white sm:hidden"></div>
