change eding 360 index html

--- a/index.html
+++ b/index.html
@@ -44,36 +44,37 @@
                     <div class="h-ends flex ml-12 items-center md:ml-9 sm:ml-3 sm:mt-0">
                         <div class="icon icon_shoppingcart"></div>
                         <button class="icon icon_menu ml-5 relative sm:ml-3">
-                            <div class="navbar-menu bg-[#181818F2] pt-7 pb-11 md:pb-8 pr-9 pl-6 right-4 w-[280px]">
+                            <div
+                                class="navbar-menu bg-[#181818F2] pt-7 sm:pt-2 pb-11 md:pb-8 sm:pb-3 pr-9 sm:pr-1 pl-6 right-4 sm:right-[0.05rem] w-[280px] sm:w-[170px]">
                                 <ul class="overlay">
                                     <li class="overlay-m-icons icon_home text-left"><a href="#"
-                                            class="text-left text-2xl mb-6 inline-block max-w-full md:text-xl md:mb-4">Главная</a>
+                                            class="text-left text-2xl mb-6 inline-block max-w-full md:text-xl sm:text-base sm:leading-4 md:mb-4 sm:mb-2">Главная</a>
                                     </li>
                                     <li class="overlay-m-icons icon_spider text-left"><a href="./entomof.html"
-                                            class="text-left text-2xl mb-6 inline-block max-w-full md:text-xl md:mb-4">Энтомофаги</a>
+                                            class="text-left text-2xl mb-6 inline-block max-w-full md:text-xl sm:text-base sm:leading-4 md:mb-4 sm:mb-2">Энтомофаги</a>
                                     </li>
                                     <li class="overlay-m-icons icon_opriskivaniy text-left"><a href="#"
-                                            class="text-left text-2xl mb-6 inline-block max-w-full md:text-xl md:mb-4">Опрыскивание</a>
+                                            class="text-left text-2xl mb-6 inline-block max-w-full md:text-xl sm:text-base sm:leading-4 md:mb-4 sm:mb-2">Опрыскивание</a>
                                     </li>
                                     <li class="overlay-m-icons icon_kartografi text-left"><a href="#"
-                                            class="text-left text-2xl mb-6 inline-block max-w-full md:text-xl md:mb-4">Картография
+                                            class="text-left text-2xl mb-6 inline-block max-w-full md:text-xl sm:text-base sm:leading-4 md:mb-4 sm:mb-2">Картография
                                             и
                                             мониторинг</a></li>
                                     <li class="overlay-m-icons icon_catalog text-left"><a href="#"
-                                            class="text-left text-2xl mb-6 inline-block max-w-full md:text-xl md:mb-4">Каталог
+                                            class="text-left text-2xl mb-6 inline-block max-w-full md:text-xl sm:text-base sm:leading-4 md:mb-4 sm:mb-2">Каталог
                                             продукции</a></li>
                                     <li class="overlay-m-icons icon_news text-left"><a href="#"
-                                            class="text-left text-2xl mb-6 inline-block max-w-full md:text-xl md:mb-4">Новости</a>
+                                            class="text-left text-2xl mb-6 inline-block max-w-full md:text-xl sm:text-base sm:leading-4 md:mb-4 sm:mb-2">Новости</a>
                                     </li>
                                     <li class="overlay-m-icons icon_aboutus text-left"><a href="#"
-                                            class="text-left text-2xl mb-6 inline-block max-w-full md:text-xl md:mb-4">О
+                                            class="text-left text-2xl mb-6 inline-block max-w-full md:text-xl sm:text-base sm:leading-4 md:mb-4 sm:mb-2">О
                                             компании</a></li>
                                     <li class="overlay-m-icons icon_phone text-left"><a href="#"
-                                            class="text-left text-2xl mb-6 inline-block max-w-full md:text-xl md:mb-4">Контакты</a>
+                                            class="text-left text-2xl mb-6 inline-block max-w-full md:text-xl sm:text-base sm:leading-4 md:mb-4 sm:mb-5">Контакты</a>
                                     </li>
                                 </ul>
-                                <div class="line block w-56 h-[1px] bg-slate-300"></div>
-                                <div class="socials flex justify-around mt-9 md:mt-7">
+                                <div class="line block w-56 sm:w-28 h-[1px] bg-slate-300"></div>
+                                <div class="socials flex justify-around mt-9 md:mt-7 sm:mt-4 sm:mr-6">
                                     <div class="social icon_whatsapp"></div>
                                     <div class="social icon_telegram"></div>
                                     <div class="social icon_wechat"></div>
@@ -431,7 +432,7 @@
     <section class="service">
         <div class="container">
             <h1
-                class="text-7xl md:text-3xl sm:text-[26px] leading-[54px] sm:leading-5 md:leading-7 mb-12 sm:mb-5 md:mb-7 md:pt-[72px] sm:pt-48">
+                class="text-7xl md:text-3xl sm:text-[26px] leading-[54px] sm:leading-5 md:leading-7 mb-12 sm:mb-5 md:mb-7 md:pt-[72px] sm:pt-60">
                 Оказываем услуги!</h1>
             <p
                 class="text-[34px]  md:text-lg sm:text-sm leading-[54px] sm:leading-6 md:leading-8 font-light max-w-[600px] md:max-w-[330px] sm:max-w-[270px] mb-[70px] md:mb-12 sm:mb-[30px] sm:mx-auto">
@@ -582,10 +583,13 @@
                 <div class="swiper-wrapper">
                     <div div class="swiper-slide">
                         <picture><img src="img/main/news1.jpg" class="img-new" alt=""></picture>
-                        <h5 class="text-xl sm:text-xl leading-[22px] sm:leading-5 mt-10 sm:mt-8 mb-4 sm:mb-4">Дроны –
+                        <h5 class="text-xl sm:text-[17px] leading-[22px] sm:leading-5 mt-10 sm:mt-8 mb-4 sm:mb-4">Дроны
+                            –
                             будущее сельского
                             хозяйства</h5>
-                        <p class="my-8 sm:mt-0 sm:mb-7 font-light text-lg sm:text-base">Новые технологии не обходят
+                        <p class="my-8 sm:my-0 sm:mt-0 sm:mb-[1.05rem] font-light text-lg sm:text-sm">Новые технологии
+                            не
+                            обходят
                             стороной и самую консервативную
                             отрасль – сельское хозяйство. Согласно прогнозам международной общественной организации
                             Association for Unmanned Vehicle Systems International, в скором времени агросектор станет
@@ -594,10 +598,11 @@
                     </div>
                     <div class="swiper-slide">
                         <picture><img src="img/main/news2.jpg" class="img-new" alt=""></picture>
-                        <h5 class="text-xl sm:text-xl leading-[22px] sm:leading-5 mt-10 sm:mt-8 mb-4 sm:mb-4">Зачем
+                        <h5 class="text-xl sm:text-[17px] leading-[22px] sm:leading-5 mt-10 sm:mt-8 mb-4 sm:mb-4">Зачем
                             нужны беспилотники в сельском хозяйстве?
                         </h5>
-                        <p class="my-8 sm:mt-0 sm:mb-7 font-light text-lg sm:text-base">Использование дронов в
+                        <p class="my-8 sm:my-0 sm:mt-0 sm:mb-[1.05rem] font-light text-lg sm:text-sm">Использование
+                            дронов в
                             земледелии и в целом в сельском
                             хозяйстве
                             - одно из наиболее перспективных направлений применения этой технологии. БЛА могут быть
@@ -608,9 +613,12 @@
                     </div>
                     <div class="swiper-slide">
                         <picture><img src="img/main/news3.jpg" class="img-new" alt=""></picture>
-                        <h5 class="text-xl sm:text-xl leading-[22px] sm:leading-5 mt-10 sm:mt-8 mb-4 sm:mb-4">Создание
+                        <h5 class="text-xl sm:text-[17px] leading-[22px] sm:leading-5 mt-10 sm:mt-8 mb-4 sm:mb-4">
+                            Создание
                             цифровых карт и контуров полей</h5>
-                        <p class="my-8 sm:mt-0 sm:mb-7 font-light text-lg sm:text-base">Многие руководители агрохозяйств
+                        <p class="my-8 sm:my-0 sm:mt-0 sm:mb-[1.05rem] font-light text-lg sm:text-sm">Многие
+                            руководители
+                            агрохозяйств
                             только приблизительно знают
                             площади своих полей, и это негативно влияет на точность расчетов внесения минудобрений и
                             подсчета полученной продукции. Чтобы эффективно управлять сельскохозяйственным предприятием
