--- a/entomof.html
+++ b/entomof.html
@@ -147,8 +147,8 @@
 
     <div class="sections-title my-8 sm:my-0 sm:mt-8 md:ml-[30px] sm:ml-0 text-2xl sm:text-xl leading-6 flex">
         <div class="container">
-            <span class="text-white">Главная / </span>
-            <span class="text-lightgreen">Энтомофаги</span>
+            <a href="./index.html" class="text-white cursor-pointer">Главная / </a>
+            <a href="./entomof.html" class="text-lightgreen cursor-pointer">Энтомофаги</a>
         </div>
     </div>
 
