adding problems secction

--- a/entomof.html
+++ b/entomof.html
@@ -198,6 +198,7 @@
 
     <section class="ento-advantage mt-6 sm:mt-0 mb-6">
         <div class="container">
+            <div class="ento-advantage-bg"></div>
             <div class="primary-title">
                 <h1>Плюсы использования</h1>
                 <h4>Приемущества внесения энтомофаги</h4>
@@ -342,6 +343,63 @@
 
 
 
+
+    <section class="problems">
+        <div class="container">
+            <div class="primary-title problems">
+                <h1>Проблемы кторые мы решаем</h1>
+                <h4>С помощью энтомофагов мы решаем следующие проблемы:</h4>
+            </div>
+            <div class="problems-bg md:hidden"></div>
+            <div class="problem-box flex justify-between  flex-wrap md:px-6 sm:px-0 sm:my-10">
+                <div class="problem-item flex max-w-[320px] md:max-w-[300px]">
+                    <div><img src="img/entomofagi/1.png" alt="number-1"
+                            class="max-w-[40px] h-[40px] sm:max-w-[30px] sm:h-[30px]"></div>
+                    <p class="problem-info">Уничтожение опылителей (пчелы, шмели).</p>
+                </div>
+                <div class="problem-item flex max-w-[320px] md:max-w-[300px]">
+                    <div><img src="img/entomofagi/2.png" alt="number-2"
+                            class="max-w-[40px] h-[40px] sm:max-w-[30px] sm:h-[30px]"></div>
+                    <p class="problem-info">Потеря урожая от работы тяжелой техники</p>
+                </div>
+                <div class="problem-item flex max-w-[320px] md:max-w-[300px]">
+                    <div><img src="img/entomofagi/3.png" alt="number-3"
+                            class="max-w-[40px] h-[40px] sm:max-w-[30px] sm:h-[30px]"></div>
+                    <p class="problem-info">уничтожения природных энтомофагов (златоглазки, божьи коровки и т.д</p>
+                </div>
+                <div class="problem-item flex max-w-[320px] md:max-w-[300px]">
+                    <div><img src="img/entomofagi/4.png" alt="number-4"
+                            class="max-w-[40px] h-[40px] sm:max-w-[30px] sm:h-[30px]"></div>
+                    <p class="problem-info">Уничтожение на посевах таких вредителей как совки, огневки, кукурузные и
+                        стеблевые мотельки, тля, клещи.</p>
+                </div>
+                <div class="problem-item flex max-w-[320px] md:max-w-[300px]">
+                    <div><img src="img/entomofagi/5.png" alt="number-5"
+                            class="max-w-[40px] h-[40px] sm:max-w-[30px] sm:h-[30px]"></div>
+                    <p class="problem-info">Дефицита воды для опрыскивания</p>
+                </div>
+                <div class="problem-item flex max-w-[320px] md:max-w-[300px]">
+                    <div><img src="img/entomofagi/6.png" alt="number-6"
+                            class="max-w-[40px] h-[40px] sm:max-w-[30px] sm:h-[30px]"></div>
+                    <p class="problem-info">Резистентности у вредителей
+                        к химическим препаратам, что ведет
+                        за собой увеличение инсектицидной нагрузки, соответственно увеличение бюджета на защиту
+                        растений.</p>
+                </div>
+            </div>
+            <div>
+                <div class="problems-line"><svg width="834" height="105" viewBox="0 0 834 105" fill="none"
+                        xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="M833 36.3008C786.959 25.6993 739.458 21.0753 692.293 22.4287C656.359 23.4437 596.505 21.8648 567.757 47.5789C552.822 60.9999 544.624 87.729 565.736 99.9094C596.505 117.616 619.75 73.1803 587.184 55.4736C577.639 50.2857 566.522 48.8195 555.742 47.8045C503.636 42.8421 453.103 48.9323 401.11 52.3157C322.278 57.5037 244.008 58.5187 165.626 47.3534C107.793 39.0075 51.0839 34.2707 0.99999 1.00024"
+                            stroke="#464646" stroke-width="2" stroke-miterlimit="10" stroke-dasharray="12 12"
+                            class="svg-elem-1"></path>
+                    </svg>
+                </div>
+                <div class="problems-drone-bg md:hidden"></div>
+            </div>
+        </div>
+    </section>
 
 
 
